[package]
name = "lisp-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort"
strip = true

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "lexer_bench"
harness = false
